--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,13 @@ version project.ext.modVersion
 setSourceCompatibility(JavaVersion.VERSION_1_8)
 setTargetCompatibility(JavaVersion.VERSION_1_8)
 
+if (hasProperty('buildScan')) {
+    buildScan {
+        termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+        termsOfServiceAgree = 'yes'
+    }
+}
+
 repositories {
     mavenCentral()
 }
